--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -2,6 +2,9 @@
 <!-- Begin Default Content REMOVE THIS -->
 <h1>Congratulations</h1>
 This is your new Page
-This page should get pused
+This page should get pushed
+This is the Test Page 2 
+
+Push to Github at 3:55 pm today
 <!-- End Default Content REMOVE THIS -->
 </apex:page>
