commit to server

--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -6,5 +6,7 @@ This page should get pushed
 This is the Test Page 2 
 
 Push to Github at 3:55 pm today
+
+<!--  add additional changes -->
 <!-- End Default Content REMOVE THIS -->
 </apex:page>
