--- a/DEV6/src/pages/StudentEnrollment.page
+++ b/DEV6/src/pages/StudentEnrollment.page
@@ -3,4 +3,6 @@
   <h1>Congratulations</h1>
   This is your new Page
   <!-- End Default Content REMOVE THIS -->
+  
+  <!--  Added comments -->
 </apex:page>
