Please commit for the Release 1 changes

--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -9,4 +9,6 @@ Push to Github at 3:55 pm today
 
 <!--  add additional changes -->
 <!-- End Default Content REMOVE THIS -->
+
+<!--  Adding the Test page changes to  -->
 </apex:page>
