Please commit the changes

--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -11,4 +11,6 @@ Push to Github at 3:55 pm today
 <!-- End Default Content REMOVE THIS -->
 
 <!--  Adding the Test page changes to  -->
+
+<-- Changes for Release 1 and Master -->
 </apex:page>
