commit for next build

--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -12,5 +12,5 @@ Push to Github at 3:55 pm today
 
 <!--  Adding the Test page changes to  -->
 
-<-- Changes for Release 1 and Master -->
+<!-- Changes for Release 1 and Master -->
 </apex:page>
