commit for the new first build

--- a/DEV6/src/pages/TestPage2.page
+++ b/DEV6/src/pages/TestPage2.page
@@ -13,4 +13,6 @@ Push to Github at 3:55 pm today
 <!--  Adding the Test page changes to  -->
 
 <!-- Changes for Release 1 and Master -->
+
+<!--  Using the Relesae 2 build  -->
 </apex:page>
